# PythonToC-Transpiler

./: .gitignore  README.md  requirements.txt  test.txt
Compiler/C++Generator/: BuiltInFuctions.py  Generator.py  SymbolTable.py  Transpiler.py
Compiler/CppGenerator/: BuiltInFuctions.py  Generator.py  SymbolTable.py  __main__.py
Compiler/ICGenerator/: ErrorLogger.py  ICG.py  Lexer.py  Parser.py  (+6 more)
Compiler/Util/: CMakeLists.txt  Makefile  MyProject  main.cpp  util.hpp
Compiler/Util/src/: factory.hpp  functions.hpp  list.hpp  main.cpp  map.hpp  object.hpp  util.hpp  var.hpp
Compiler/Util/src/Boolean/: Boolean.hpp
Compiler/Util/src/Collections/: Builtin.cpp  Builtin.hpp  Collection.hpp  List.cpp  List.hpp  Map.cpp  Map.hpp  Pair.cpp  Pair.hpp  Set.cpp  Set.hpp  Tuple.cpp  Tuple.hpp
Compiler/Util/src/Dictionary/: Dictionay.hpp
Compiler/Util/src/Double/: Double.hpp
Compiler/Util/src/Integer/: Integer.hpp
Compiler/Util/src/Numeric/: Builtin.cpp  Builtin.hpp  Double.cpp  Double.hpp  Integer.cpp  Integer.hpp  Numeric.hpp
Compiler/Util/src/Object/: includes.hpp  object.cpp  object.hpp  var.cpp  var.hpp
Compiler/Util/src/Primitive/: Boolean.cpp  Boolean.hpp  Builtin.cpp  Builtin.hpp  Primitive.hpp  String.cpp  String.hpp
Compiler/Util/src/String/: String.hpp
Compiler/Util/src/Var/: var.hpp
PythonLexer/: Lexer.py  Parser.py  Showcase.py  TokenRules.py  parser.out  parsetab.py  test.txt  test_parser.py  tests.py
PythonLexerParser/: ErrorLogger.py  Lexer.py  Parser.py  SymbolTable.py  TokenRules.py  common.py  errors.py  main.py  node.py  out.txt  remov.py
(+10 files in other folders)
